fix: tweaked UI for federal mobile; changed to only one refresh on a page
